Re ordered the csv.

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "dcdc3ffb",
    "metadata": {},
    "outputs": [],
@@ -365,6 +365,179 @@
    "source": [
     "missing_ids = stops.loc[~stops['STOPID'].isin(linestop['STOPID']), 'STOPID']\n",
     "print(missing_ids.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e2496382",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LINEID</th>\n",
+       "      <th>PLANVERSIONID</th>\n",
+       "      <th>SHORTNAME</th>\n",
+       "      <th>DESCRIPTION</th>\n",
+       "      <th>PLANVERSIONID.1</th>\n",
+       "      <th>ACTIVATIONDATE</th>\n",
+       "      <th>CREATIONDATE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>131</td>\n",
+       "      <td>241</td>\n",
+       "      <td>T31</td>\n",
+       "      <td>Terminal Paso del Comercio - Universidades</td>\n",
+       "      <td>241</td>\n",
+       "      <td>2018-05-15 00:00:00.000</td>\n",
+       "      <td>2018-05-14 22:55:16.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>140</td>\n",
+       "      <td>241</td>\n",
+       "      <td>T40</td>\n",
+       "      <td>Terminal Andrés Sanín - Centro</td>\n",
+       "      <td>241</td>\n",
+       "      <td>2018-05-15 00:00:00.000</td>\n",
+       "      <td>2018-05-14 22:55:16.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2102</td>\n",
+       "      <td>241</td>\n",
+       "      <td>P10B</td>\n",
+       "      <td>Estación Universidades-El Ingenio-Estación-Est...</td>\n",
+       "      <td>241</td>\n",
+       "      <td>2018-05-15 00:00:00.000</td>\n",
+       "      <td>2018-05-14 22:55:16.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2301</td>\n",
+       "      <td>241</td>\n",
+       "      <td>P30A</td>\n",
+       "      <td>Estación Flora Industrial-Terminal Menga - Centro</td>\n",
+       "      <td>241</td>\n",
+       "      <td>2018-05-15 00:00:00.000</td>\n",
+       "      <td>2018-05-14 22:55:16.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2471</td>\n",
+       "      <td>241</td>\n",
+       "      <td>P47A</td>\n",
+       "      <td>Terminal Andrés Sanín - Estación Unidad Deportiva</td>\n",
+       "      <td>241</td>\n",
+       "      <td>2018-05-15 00:00:00.000</td>\n",
+       "      <td>2018-05-14 22:55:16.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   LINEID  PLANVERSIONID SHORTNAME  \\\n",
+       "0     131            241       T31   \n",
+       "1     140            241       T40   \n",
+       "2    2102            241      P10B   \n",
+       "3    2301            241      P30A   \n",
+       "4    2471            241      P47A   \n",
+       "\n",
+       "                                         DESCRIPTION  PLANVERSIONID.1  \\\n",
+       "0         Terminal Paso del Comercio - Universidades              241   \n",
+       "1                     Terminal Andrés Sanín - Centro              241   \n",
+       "2  Estación Universidades-El Ingenio-Estación-Est...              241   \n",
+       "3  Estación Flora Industrial-Terminal Menga - Centro              241   \n",
+       "4  Terminal Andrés Sanín - Estación Unidad Deportiva              241   \n",
+       "\n",
+       "            ACTIVATIONDATE             CREATIONDATE  \n",
+       "0  2018-05-15 00:00:00.000  2018-05-14 22:55:16.000  \n",
+       "1  2018-05-15 00:00:00.000  2018-05-14 22:55:16.000  \n",
+       "2  2018-05-15 00:00:00.000  2018-05-14 22:55:16.000  \n",
+       "3  2018-05-15 00:00:00.000  2018-05-14 22:55:16.000  \n",
+       "4  2018-05-15 00:00:00.000  2018-05-14 22:55:16.000  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lines = pd.read_csv('./lines-241.csv')\n",
+    "lines.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f7025aab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing_lines_ids = lines.loc[~lines['LINEID'].isin(linestop['LINEID']), 'LINEID']\n",
+    "print(missing_lines_ids.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f1f520e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 251,  271,  272, 2121, 2524, 2801, 2841,  282, 2141,  306,  311,\n",
+       "        318,  321,  322,  323,  324, 2212, 3132, 3133, 3141, 3142, 3171,\n",
+       "       3172,  332,  333,  334,  336,  347, 2241, 2242, 3173, 3191, 3192,\n",
+       "        441,  452,  551,  552,  553,  554,  555,  557,  651,  722, 2402,\n",
+       "       2471, 1472, 1571, 2101, 2472,  283,  302, 2211, 2842, 3011,  303,\n",
+       "        304,  305, 3112, 3121, 3122, 3123, 3124, 3131, 2102, 2104, 2473,\n",
+       "        131,  140,  142, 2521,  150,  217,  352,  353,  355,  357, 2243,\n",
+       "       2273, 3351, 3371, 3372, 3411,  370,  371,  373,  375, 2274, 3413,\n",
+       "       3422, 3441, 3442,  376,  377,  385,  421, 2301, 3452, 3721, 3722,\n",
+       "        427,  431,  437, 2401, 3781, 4272])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linestop['LINEID'].unique()"
    ]
   }
  ],
